--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,18 +1,35 @@
 @import url('https://fonts.cdnfonts.com/css/poppins');
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 .app {
-    text-align: center;
-    margin-top: 10vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5f5;
+    padding-bottom: 100px;
 }
 
-h1 {
-    margin-top: 10vh;
+.app-head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 15vh;
+    margin-bottom: 10vh;
+}
+
+.app-head h1 {
     font-size: 3rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 900;
-    margin-bottom: 0;
+}
+
+.app-head p {
+    font-size: 1rem;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
 }
