--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -28,8 +28,12 @@
     font-weight: 900;
 }
 
-.app-head p {
+.app-head p, a {
     font-size: 1rem;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
+}
+
+p, h1, h2, h3, h4, h5, h6, a {
+    font-family: 'Poppins', sans-serif;
 }
